--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,7 +60,7 @@
 
   {% block body %}{% endblock %}
   <p> Designed by <a href="http://jeremyschembri.com">Jeremy Schembri</a> </p>
-  <p> Find the code at <a href="http://jeremyschembri.com">Github</a> </p>
+  <p> Find the code at <a href="https://github.com/jschembri/markovJobPostingGenerator">Github</a> </p>
 </div>
 
 {% endwith %}
